--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "dependencies": {
     "colors": "^1.4.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.0.3",
     "socket.io": "^4.7.2"
   },
   "scripts": {
+    "prod": "node server.js",
     "start": "nodemon server.js "
   },
   "devDependencies": {
